tests/machine/x/ocaml/outer_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/outer_join.ml", line 33, characters 42-43:
33 |         __res0 := { order = o; customer = c } :: !__res0;
                                               ^
Error: This expression has type record2
       but an expression was expected of type record1


Context (around line 33):
  31 |     List.iter (fun c ->
  32 |       if (o.customerId = c.id) then (
  33 |         __res0 := { order = o; customer = c } :: !__res0;
  34 |         matched := true)
  35 |     ) customers;
